--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "socketshare",
   "version": "1.0.1",
-  "main": "bin/app.js",
   "description": "Create a temporary fileserver to share files over the internet.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,19 +17,17 @@
     "url": "https://gitlab.com/theamazingfedex/socketshare/issues"
   },
   "homepage": "https://gitlab.com/theamazingfedex/socketshare#README",
+  "bin": {
+    "socketshare": "bin/app.js"
+  },
   "dependencies": {
-    "child-process-promise": "^1.1.0",
     "content-disposition": "^0.5.0",
     "copy-paste": "^1.1.3",
-    "cute-files": "^1.0.2",
     "express": "^4.13.3",
-    "goo.gl": "^0.1.4",
     "minimist": "^1.1.3",
-    "pmp": "^0.5.0",
     "tinyurl": "^1.0.8"
   },
   "devDependencies": {
-    "babel": "^5.8.21",
-    "babel-core": "^5.8.22"
+    "babel": "^5.8.21"
   }
 }
