--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "tinyurl": "^1.0.8"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
+    "babel": "^6.3.23",
     "babel-preset-es2015": "^6.3.13"
   },
   "babel": {
