--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "devDependencies": {
     "babel": "^6.3.23",
-    "babel-preset-es2015": "^6.3.13"
+    "babel-preset-es2015": "^6.3.13",
+    "blue-tape": "^0.1.11"
   },
   "babel": {
     "presets": [
