--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 before_install:
-  - "npm install && npm run build"
+  - "npm install -d && npm run build"
 node_js:
   - "4.1"
   - "4.0"
