--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ node_js:
   - "0.12"
   - "0.10"
   - "iojs"
+notificiations:
+  email:
+    on_fail: never
+    on_success: never
+    on_change: never
