--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 before_install:
-  - "npm install -d && npm run build"
+  - "npm install -d"
 node_js:
   - "4.1"
   - "4.0"
@@ -8,7 +8,4 @@ node_js:
   - "0.10"
   - "iojs"
 notificiations:
-  email:
-    on_fail: never
-    on_success: never
-    on_change: never
+  email: false
