--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.2",
   "description": "Create a temporary fileserver to share files over the internet.",
   "scripts": {
-    "test": "babel-tape-runner 'tests/**/*.js'",
+    "test": "babel-tape-runner 'tests/**/*.js' | faucet",
     "start": "npm run build && node bin/app",
     "build": "babel src --out-dir bin",
     "publish": "babel src --out-dir bin && npm publish"
@@ -35,8 +35,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-tape-runner": "^2.0.0",
     "blue-tape": "^0.1.11",
-    "colored-tape": "^1.0.1",
-    "tape": "^4.4.0"
+    "faucet": "0.0.1"
   },
   "babel": {
     "presets": [
