--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   },
   "preferGlobal": true,
   "dependencies": {
-    "content-disposition": "^0.5.0",
-    "copy-paste": "^1.1.3",
-    "express": "^4.13.3",
-    "externalip": "^1.0.1",
-    "minimist": "^1.1.3",
-    "tinyurl": "^1.0.8"
+    "content-disposition": "0.5.0",
+    "copy-paste": "1.1.3",
+    "express": "4.13.3",
+    "externalip": "1.0.1",
+    "minimist": "1.1.3",
+    "tinyurl": "1.0.8"
   },
   "devDependencies": {
-    "babel": "^6.3.23",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-tape-runner": "^2.0.0",
-    "blue-tape": "^0.1.11",
+    "babel": "6.3.23",
+    "babel-preset-es2015": "6.3.13",
+    "babel-tape-runner": "2.0.0",
+    "blue-tape": "0.1.11",
     "faucet": "0.0.1"
   },
   "babel": {
