--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
   "dependencies": {
     "content-disposition": "0.5.0",
     "copy-paste": "1.1.3",
-    "express": "4.13.3",
+    "express": "4.13.x",
     "externalip": "1.0.1",
     "minimist": "1.1.3",
     "tinyurl": "1.0.8"
   },
   "devDependencies": {
-    "babel": "6.3.23",
-    "babel-preset-es2015": "6.3.13",
+    "babel": "6.3.x",
+    "babel-preset-es2015": "6.3.x",
     "babel-tape-runner": "2.0.0",
-    "blue-tape": "0.1.11",
+    "blue-tape": "0.1.x",
     "faucet": "0.0.1"
   },
   "babel": {
