--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
     "tinyurl": "1.0.8"
   },
   "devDependencies": {
+    "babel-cli": "6.4.x",
     "babel-core": "6.5.2",
     "babel-loader": "6.2.x",
-    "babel-cli": "6.4.x",
     "babel-preset-es2015": "6.3.x",
     "babel-tape-runner": "2.0.0",
     "blue-tape": "0.1.x",
     "faucet": "0.0.1"
   },
   "babel": {
+    "plugins": [
+      "transform-es2015-modules-commonjs"
+    ],
     "presets": [
       "es2015"
     ]
