--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   "dependencies": {
     "content-disposition": "0.5.0",
     "copy-paste": "1.1.3",
-    "express": "4.13.x",
-    "externalip": "1.0.1",
+    "express": "^4.16.4",
+    "externalip": "^1.0.2",
     "minimist": "1.1.3",
     "tinyurl": "1.0.8"
   },
   "devDependencies": {
-    "babel-core": "6.5.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "6.2.x",
-    "babel-cli": "6.4.x",
     "babel-preset-es2015": "6.3.x",
     "babel-tape-runner": "2.0.0",
     "blue-tape": "0.1.x",
