--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "preferGlobal": true,
   "dependencies": {
+    "7zip-bin": "^4.1.0",
     "content-disposition": "0.5.0",
     "copy-paste": "1.1.3",
     "express": "^4.16.4",
     "externalip": "^1.0.2",
     "minimist": "1.1.3",
+    "node-7z": "^1.0.1",
     "tinyurl": "1.0.8"
   },
   "devDependencies": {
