--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socketshare",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Create a temporary fileserver to share files over the internet.",
   "scripts": {
     "test": "babel-tape-runner ./tests/**/*.js | faucet",
@@ -26,10 +26,12 @@
     "7zip-bin": "4.1.0",
     "content-disposition": "0.5.0",
     "copy-paste": "1.1.3",
+    "destroy": "^1.0.4",
     "express": "4.16.4",
     "external-ip": "2.1.1",
     "minimist": "1.1.3",
     "node-7z": "1.0.1",
+    "on-finished": "^2.3.0",
     "tinyurl": "1.0.8"
   },
   "devDependencies": {
