--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "babel-tape-runner ./tests/**/*.js | faucet",
     "start": "npm run build && node bin/app",
     "build": "babel src --out-dir bin",
-    "publish": "babel src --out-dir bin && npm publish"
+    "publish": "babel src --out-dir bin && npm publish",
+    "local": "babel-node src/app.js"
   },
   "repository": {
     "type": "git",
@@ -41,7 +42,8 @@
     "babel-preset-es2015": "6.3.x",
     "babel-tape-runner": "2.0.0",
     "blue-tape": "0.1.x",
-    "faucet": "0.0.1"
+    "faucet": "0.0.1",
+    "touch": "^3.1.0"
   },
   "babel": {
     "presets": [
