--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run build && node bin/app",
     "build": "babel src --out-dir bin",
     "publish": "babel src --out-dir bin && npm publish",
-    "local": "babel-node src/app.js"
+    "local": "babel-node src/app.js",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -42,7 +43,9 @@
     "babel-preset-es2015": "6.3.x",
     "babel-tape-runner": "2.0.0",
     "blue-tape": "0.1.x",
+    "coveralls": "^3.0.3",
     "faucet": "0.0.1",
+    "nyc": "^13.3.0",
     "touch": "^3.1.0"
   },
   "babel": {
