--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "babel src --out-dir bin",
     "publish": "babel src --out-dir bin && npm publish",
     "local": "babel-node src/app.js",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "coveralls": "nyc babel-tape-runner ./tests/**.*.js && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -28,25 +29,25 @@
     "7zip-bin": "4.1.0",
     "content-disposition": "0.5.0",
     "copy-paste": "1.1.3",
-    "destroy": "^1.0.4",
+    "destroy": "1.0.4",
     "express": "4.16.4",
     "external-ip": "2.1.1",
     "minimist": "1.1.3",
     "node-7z": "1.0.1",
-    "on-finished": "^2.3.0",
+    "on-finished": "2.3.0",
     "tinyurl": "1.0.8"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-loader": "6.2.x",
     "babel-preset-es2015": "6.3.x",
     "babel-tape-runner": "2.0.0",
     "blue-tape": "0.1.x",
-    "coveralls": "^3.0.3",
+    "coveralls": "3.0.3",
     "faucet": "0.0.1",
-    "nyc": "^13.3.0",
-    "touch": "^3.1.0"
+    "nyc": "13.3.0",
+    "touch": "3.1.0"
   },
   "babel": {
     "presets": [
