chore(repository_maintenance): add auto publish on merge to master
 * Using `semantic-release` to handle automatic version management and
    publishing of npm packages upon successful merge into master.
 * Also adds automatic CHANGELOG generation and creation of GitHub releases.
 * Changes the way commmits will be structured going forward to use the
    [AngularJS Standard](https://github.com/angular/angular.js/blob/master/DEVELOPERS.md#-git-commit-guidelines)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,23 @@ notificiations:
   email: false
 script:
   - npm run coveralls
+
+jobs:
+  include:
+  - stage: install
+    script: npm install
+    skip_cleanup: true
+
+  - stage: test
+    script: npm run report:coverage
+    skip_cleanup: true
+
+  - stage: release
+    node_js: lts/*
+
+    deploy:
+      provider: script
+      skip_cleanup: true
+      script:
+      - npx semantic-release
+    if: branch = master
