--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.3.1",
   "description": "Create a temporary fileserver to share files over the internet.",
   "scripts": {
+    "commit": "git-cz",
     "test": "babel-tape-runner ./tests/**/*.js | faucet",
     "start": "npm run build && node bin/app",
     "build": "babel src --out-dir bin",
     "publish": "babel src --out-dir bin && npm publish",
     "local": "babel-node src/app.js",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls -v",
-    "coveralls": "nyc babel-tape-runner ./tests/**.*.js && nyc report --reporter=text-lcov | coveralls -v"
+    "coveralls": "nyc babel-tape-runner ./tests/**.*.js && nyc report --reporter=text-lcov | coveralls -v",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,7 @@
   "author": "Daniel Wood",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/theamazingfedex/socketshare"
+    "url": "https://github.com/theamazingfedex/socketshare/issues"
   },
   "homepage": "https://github.com/theamazingfedex/socketshare#README",
   "bin": {
@@ -38,15 +40,23 @@
     "tinyurl": "1.0.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "@commitlint/prompt": "^7.5.0",
+    "@semantic-release/changelog": "^3.0.2",
+    "@semantic-release/git": "^7.0.8",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-loader": "6.2.x",
     "babel-preset-es2015": "6.3.x",
     "babel-tape-runner": "2.0.0",
     "blue-tape": "0.1.x",
+    "commitizen": "^3.0.7",
     "coveralls": "3.0.3",
     "faucet": "0.0.1",
+    "husky": "^1.3.1",
     "nyc": "13.3.0",
+    "semantic-release": "^15.13.3",
     "touch": "3.1.0"
   },
   "babel": {
@@ -65,5 +75,20 @@
     "terminal",
     "cmd",
     "node"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/prompt"
+    }
+  }
 }
