chore(repository_maintenance): add NODE_ENV to `.travis.yml`

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 notificiations:
   email: false
+env:
+  global:
+    - NODE_ENV=development
 jobs:
   include:
   - stage: install
