chore(repository_maintenance): fix node versions for Travis-CI
Travis-CI was attempting to install everything under v0.10.13
instead of the versions defined in our `.travis.yml`.
This commit just copies the node versions from the test step up into the install step.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ jobs:
   include:
   - stage: install
     script: npm install
+    node_js:
+      - "11.10"
+      - "11.0"
+      - "10.15.2"
+      - "10.13"
+      - "10.0"
     skip_cleanup: true
   - stage: test
     script: npm run coveralls
