--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,11 @@
-dist: trusty
-sudo: required
 language: node_js
 node_js:
-- "10.15.3"
-- "11.10"
-
-os:
-- linux
-
-jobs:
-  include:
-  - stage: install
-    script: npm install
-    skip_cleanup: true
-  - stage: test
-    script: npm run coverage
-    skip_cleanup: true
-  - stage: release
-    node_js: 10.15.3
-    deploy:
-      provider: script
-      skip_cleanup: true
-      script:
-      - npx semantic-release
-    if: branch = master
+  - "11.10"
+  - "11.0"
+  - "10.15.2"
+  - "10.13"
+  - "10.0"
+notificiations:
+  email: false
+script:
+  - npm run coveralls
